--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portifólio</title>
+    <link rel="stylesheet" type="text/css" href="./Style.css">
+    Programador FullStack 
 </head>
+<h1>iniciante na area da programação</h1> 
+<p1>Skills</p1>
+<h2>Projetos</h2>
 <body>
-    
 </body>
 </html>
