--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" type="text/css" href="./Style.css">
-    Programador FullStack 
+    <title>Portifólio</title> 
 </head>
-<h1>iniciante na area da programação</h1> 
-<p1>Skills</p1>
-<h2>Projetos</h2>
 <body>
+    <div>Início</div>
 </body>
 </html>
