--- a/index.html
+++ b/index.html
@@ -4,28 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Document</title>
-    <link rel = "stylesheet"href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div id="main">
-     <p>salve</p>
-    <p>salve</p>
 
+<body>
+    <div class="container">
+        <div id="nav">nav</div>
+        <div id="main"> main</div>
+        <div id="sidebar">sidebar</div>
+        <div id="conteudo1">conteudo1</div>
+        <div id="conteudo2">conteudo2</div>
+        <div id="footer">footer</div>
     </div>
 
-
-    
-=======
-    <title>Portifólio</title>
-    <link rel="stylesheet" type="text/css" href="./Style.css">
-    <title>Portifólio</title>
-</head>
-
-<body>
-    <div>Início</div>
->>>>>>> a3f16b43c81f60344854441efe824a08463bfe6f
 </body>
 
 </html>
