--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Document</title>
     <link rel = "stylesheet"href="style.css">
 </head>
@@ -16,13 +18,5 @@
 
 
     
-=======
-    <title>Portifólio</title>
-    <link rel="stylesheet" type="text/css" href="./Style.css">
-    <title>Portifólio</title> 
-</head>
-<body>
-    <div>Início</div>
->>>>>>> a3f16b43c81f60344854441efe824a08463bfe6f
 </body>
 </html>
