--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
     <div class="container">
         <div id="nav">
+            <div class="div-fundo"></div>
             <div class="navegacao">
                 <li class="navegacao-bar">
                     <ul class="container-logo">
-                        <div class="logo"></div>
-                        <div><a href=""></a>Decimal</div>
+                        <div class="logo"><img src="site/images/1656733637logo-canva-png.png"></div>
+                        <div class = "Decimal"><a href=""></a>Decimal</div>
                     </ul>
                     <ul><a href="">Exchanges</a></ul>
                     <ul><a href="">Team</a></ul>
